# reproducible-cuda-workflows-with-pixi-scipy-2026

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  CITATION.cff  README.md  pixi.toml
.github/workflows/: ci.yml  deploy.yml
book/: cuda-conda.md  cuda-hardware-acceleration.md  cutile-python-introduction.md  glossary.md  index.md  ml-example.md  myst.yml  pixi-build-cuda-exercise.md  pixi-build-cuda.md  pixi-exercise.md  pixi.md  setup.md
book/code/: setup_brev.sh  torch_MNIST_inference.py
book/code/brev/: setup_brev.sh  setup_pixi_kernel.sh
book/code/combined-build-example/: README.md  pixi.toml
book/code/combined-build-example/src/cuda-brot/: CMakeLists.txt  README.md
book/code/combined-build-example/src/cutile-brot/: pixi.toml
book/code/cudabrot-build-example/: CMakeLists.txt  README.md  pixi.toml
book/code/cudabrot-build-example/src/: main.cu
book/code/cudf-example/: pixi.toml
book/code/cupy-example/: pixi.toml
book/code/cutile-build-example/: README.md  pixi.toml  pyproject.toml
book/code/cutile-build-example/src/cutile_example/: __init__.py  mandelbrot.py  vector_add.py
book/code/cutile-python-intro/: 01__cutile_python_intro__vector_add.ipynb  cutile-python-intro.ipynb  pixi.toml
scripts/: brev_pixi.py
scripts/_brev_pixi/: __init__.py  brev.py  cli.py  exceptions.py  models.py  project.py  remote.py  runner.py
